/*
 * Copyright 2022 Thoughtworks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

apply plugin: 'java'
apply from: "https://raw.githubusercontent.com/gocd/gocd-plugin-gradle-task-helpers/master/helper.gradle?_=${(int) (new Date().toInstant().epochSecond / 60)}"

gocdPlugin {
    id = 'cd.go.contrib.elastic-agent.openstack'
    pluginVersion = "1.0.0"
    goCdVersion = '20.9.0'
    name = 'OpenStack Elastic Agent Plugin'
    description = 'OpenStack Based Elastic Agent Plugins for GoCD'
    vendorName = 'ThoughtWorks, Inc.'
    vendorUrl = 'https://github.com/gocd-contrib/openstack-elastic-agent'

    githubRepo {
        owner = System.getenv('GITHUB_USER') ?: 'bob'
        repo = 'openstack-elastic-agents'
        token = System.getenv('GITHUB_TOKEN') ?: 'bad-token'
    }

    pluginProject = project

    prerelease = !"No".equalsIgnoreCase(System.getenv('PRERELEASE'))
    assetsToRelease = [project.tasks.jar]
    licenseReport.excludeGroups = ['net.jcip', 'org.jboss.resteasy']
}

group = 'cd.go.contrib'
version = gocdPlugin.fullVersion(project)

repositories {
    mavenCentral()
    mavenLocal()
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

ext {
    deps = [
        gocdPluginApi: 'cd.go.plugin:go-plugin-api:23.5.0',
        mockito      : 'org.mockito:mockito-core:5.10.0',
        cache2k      : 'org.cache2k:cache2k-api:1.2.3.Final',
    ]

    versions = project.ext.deps.collectEntries { lib, libGav -> [lib, libGav.split(':').last()] }
}


dependencies {
    compileOnly project.deps.gocdPluginApi
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation group: 'org.pacesys', name: 'openstack4j', version: '3.2.0'
    implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'

    components {
        // workaround for Guava metadata declaring dependencies that are not needed at runtime
        // see https://github.com/google/guava/pull/6606
        withModule('com.google.guava:guava', { details ->
            details.allVariants {
                withDependencies {
                    removeAll {
                        it.name in [ "jsr305", "checker-qual", "error_prone_annotations", "listenablefuture" ]
                    }
                }
            }
        })
    }

    implementation group: 'joda-time', name: 'joda-time', version: '2.12.6'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.13'
    implementation project.deps.cache2k
    runtimeOnly group: 'org.cache2k', name: 'cache2k-core', version: project.versions.cache2k

    testImplementation project.deps.gocdPluginApi
    testImplementation platform('org.junit:junit-bom:5.10.1')
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.25.2'
    testImplementation project.deps.mockito
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: project.versions.mockito
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.1'
}

test {
    useJUnitPlatform()
}

jar {
    from(configurations.runtimeClasspath) {
        into "lib/"
    }

    from(sourceSets.main.java) {
        into "/"
    }
}
